--- a/src/components/Board/styles.css
+++ b/src/components/Board/styles.css
@@ -1,3 +1,15 @@
+.scoreboard {
+    color: #9f4acf;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 150px;
+    align-items: initial;
+    justify-content: center;
+    opacity: 0.6;
+    position: absolute;
+    z-index: 1;
+}
+
 .board {
     padding: 1px;
     height: 520px;
